--- a/Workflow/smake.yml
+++ b/Workflow/smake.yml
@@ -2,6 +2,7 @@ name: smake
 channels:
   - bioconda
   - conda-forge
+  channel_priority: strict
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
